# pynoteflow-server

./: .gitignore  README.md  install-and-run.ps1  install-and-run.sh  pyproject.toml
pynoteflow_server/: __init__.py  __main__.py  kernel_bridge.py  server.py
